# corec

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: docs.yml
corec/evaluation/: evaluator.py  metric_generator.py  qrels_generator.py  run_generator.py
corec/postfilters/: postfilter.py
corec/recommenders/: base_rec.py
corec/recommenders/context_recs/heuristic_recs/: context_pop.py  context_random.py  context_satisfaction.py  heuristic_rec.py
docs/: mkdocs.yml
