[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corec"
version = "0.1.1"
description = "A context-aware recommender system framework"
authors = [
    {name = "Jaime Gimillo", email = "jaimegimillo@gmail.com"}
]
readme = "README.md"
license = {text = "LICENSE"}
keywords = ["recommender", "context-aware", "evaluation", "framework"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6,<4.0"
dependencies = ["pydantic"]

[project.optional-dependencies]
recommender = []
evaluator = ["ranx"]
